# hsite

./: CNAME  atom.xml  flake.nix  index.html  rss.xml  sitemap.xml
.github/workflows/: main.yml
css/: default.css
posts/2026/: example-post.html
src/: index.html
src/css/: default.css
src/posts/: 1.md
src/templates/: default.html  post.html
ssg/: ssg.cabal
ssg/src/: Main.hs
