cabal-version:       3.6

name:                ssg
version:             0.1.0.0
build-type:          Simple
license:             AGPL-3.0-only AND BSD-3-Clause
license-files:       LICENSE
                     LICENSE-of-TEMPLATE

executable hakyll-site
  default-language:  Haskell2010
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base == 4.*
                   , hakyll == 4.15.*
                   , filepath >= 1.0
                   , pandoc >= 2.11
                   , slugger >= 0.1.0.2
                   , text >= 1 && < 3
  ghc-options:     -Wall
                   -Wcompat
                   -Widentities
                   -Wincomplete-record-updates
                   -Wincomplete-uni-patterns
                   -Wpartial-fields
                   -Wredundant-constraints
                   -O2
                   -threaded
                   -rtsopts
                   -with-rtsopts=-N
